// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Button tests should render button 1`] = `
.c2 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c2:focus,
.c2:hover {
  border: 1px solid #393637;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c2[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c2 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c2:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c0:hover {
  color: #fff;
  background: #519032;
}

<button
  class="c0 c1 c2"
/>
`;

exports[`Dialog Button tests should render button when loading 1`] = `
.c2 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c2:focus,
.c2:hover {
  border: 1px solid #393637;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c2[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c2 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c2:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  border: 1px solid #787878;
  color: rgba(0,0,0,0.0);
  background: #87d050 url(/img/loading.gif) center center no-repeat;
}

.c0:hover {
  color: rgba(0,0,0,0.0);
  background: #66c430 url(/img/loading.gif) center center no-repeat;
}

<button
  class="c0 c1 c2"
/>
`;
